--- a/prisma/adminSettings.json
+++ b/prisma/adminSettings.json
@@ -4,7 +4,9 @@
       "id": "Group",
       "name": "Group",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -133,7 +135,9 @@
       "id": "Dashboard",
       "name": "Dashboard",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -282,7 +286,10 @@
       "id": "User",
       "name": "User",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id",
+        "group.name"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -419,8 +426,8 @@
           "create": false,
           "update": false,
           "read": false,
-          "filter": true,
-          "sort": true,
+          "filter": false,
+          "sort": false,
           "editor": false,
           "upload": false,
           "relationField": true,
@@ -433,7 +440,9 @@
       "id": "Section",
       "name": "Section",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -642,7 +651,9 @@
       "id": "Step",
       "name": "Step",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -870,7 +881,9 @@
       "id": "JournalEntry",
       "name": "Journal Entry",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -960,7 +973,9 @@
       "id": "Job",
       "name": "Job",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -1129,7 +1144,9 @@
       "id": "JobRun",
       "name": "Job Run",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -1399,7 +1416,12 @@
     },
     {
       "name": "JobType",
-      "fields": ["AUTOSYS", "FMC", "DATABASE", "INSTRUMENTED"]
+      "fields": [
+        "AUTOSYS",
+        "FMC",
+        "DATABASE",
+        "INSTRUMENTED"
+      ]
     }
   ]
 }
