--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "migrate-database": "prisma migrate up --experimental --auto-approve --create-db",
     "db-start": "docker-compose up -d",
     "db-stop": "docker-compose down",
-    "seed": "ts-node --transpile-only -P nexus.tsconfig.json seed-database"
+    "db-dump": "docker exec -it job-dashboard-pg pg_dump --host localhost --port 5432 --username dashboard dashboard > dashboard-dump.sql",
+    "db-connect": "docker exec -it job-dashboard-pg psql postgresql://dashboard:dashboard@localhost:5432/dashboard",
+    "db-seed": "ts-node --transpile-only -P nexus.tsconfig.json seed-database"
   },
   "dependencies": {
     "@apollo/client": "3.0.0",
