--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "generate": "yarn generate:prisma && yarn generate:nexus && yarn codegen",
+    "generate": "yarn generate:prisma && pal g && yarn generate:nexus && yarn codegen",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json src/Api/nexusSchema",
     "codegen": "graphql-codegen --config codegen.yml",
@@ -20,11 +20,11 @@
     "db-seed": "ts-node --transpile-only -P nexus.tsconfig.json seed-database"
   },
   "dependencies": {
-    "@apollo/client": "3.0.0",
+    "@apollo/client": "3.0.2",
     "@apollo/react-ssr": "4.0.0-beta.2",
     "@nexus/schema": "0.14.0",
-    "@paljs/nexus": "1.1.3",
-    "@paljs/admin": "1.1.3",
+    "@paljs/nexus": "1.1.7",
+    "@paljs/admin": "1.1.6",
     "@paljs/ui": "1.0.3",
     "@paljs/icons": "1.0.1",
     "@prisma/client": "2.2.2",
