--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "db-stop": "docker-compose down",
     "db-dump": "docker exec -it job-dashboard-pg pg_dump --host localhost --port 5432 --username dashboard dashboard > dashboard-dump.sql",
     "db-connect": "docker exec -it job-dashboard-pg psql postgresql://dashboard:dashboard@localhost:5432/dashboard",
-    "db-seed": "ts-node --transpile-only -P nexus.tsconfig.json seed-database"
+    "db-seed": "ts-node --transpile-only -P nexus.tsconfig.json scripts/seed-database",
+    "db-drop": "ts-node --transpile-only -P nexus.tsconfig.json scripts/drop-database"
   },
   "dependencies": {
     "@apollo/client": "3.0.2",
@@ -51,22 +52,22 @@
     "@types/cookie": "0.4.0",
     "@types/graphql": "14.5.0",
     "@types/jsonwebtoken": "8.5.0",
-    "@types/node": "12.12.50",
+    "@types/node": "14.0.23",
     "@types/react": "16.9.43",
     "@types/react-dom": "16.9.8",
-    "@types/styled-components": "4.4.3",
+    "@types/styled-components": "5.1.1",
     "@typescript-eslint/eslint-plugin": "3.6.1",
     "@typescript-eslint/parser": "3.6.1",
     "babel-plugin-graphql-tag": "2.5.0",
     "babel-plugin-styled-components": "1.10.7",
-    "eslint": "7.4.0",
+    "eslint": "7.5.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.20.3",
     "husky": "4.2.5",
     "prettier": "2.0.5",
     "pretty-quick": "2.0.1",
-    "typescript": "3.9.6"
+    "typescript": "3.9.7"
   },
   "husky": {
     "hooks": {
