--- a/prisma/adminSettings.json
+++ b/prisma/adminSettings.json
@@ -310,6 +310,26 @@
       "delete": true,
       "fields": [
         {
+          "id": "User.isAdmin",
+          "name": "isAdmin",
+          "type": "Boolean",
+          "isId": false,
+          "unique": false,
+          "list": false,
+          "required": true,
+          "kind": "scalar",
+          "relationField": false,
+          "title": "Is Admin",
+          "create": true,
+          "update": true,
+          "editor": false,
+          "upload": false,
+          "read": true,
+          "filter": true,
+          "sort": true,
+          "order": -1
+        },
+        {
           "id": "User.id",
           "name": "id",
           "title": "Id",
