--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@apollo/client": "3.0.2",
     "@apollo/react-ssr": "4.0.0-beta.2",
     "@nexus/schema": "0.14.0",
-    "@paljs/nexus": "1.1.7",
     "@paljs/admin": "1.1.6",
-    "@paljs/ui": "1.0.3",
     "@paljs/icons": "1.0.1",
+    "@paljs/nexus": "1.1.7",
+    "@paljs/ui": "1.0.3",
     "@prisma/client": "2.2.2",
     "apollo-server-micro": "2.15.1",
     "bcryptjs": "2.4.3",
@@ -36,6 +36,7 @@
     "graphql-tag": "2.10.4",
     "graphql-tools": "6.0.13",
     "jsonwebtoken": "8.5.1",
+    "moment": "^2.27.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
