--- a/prisma/adminSettings.json
+++ b/prisma/adminSettings.json
@@ -4,7 +4,9 @@
       "id": "Group",
       "name": "Group",
       "idField": "id",
-      "displayFields": ["name"],
+      "displayFields": [
+        "name"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -135,7 +137,9 @@
       "id": "Dashboard",
       "name": "Dashboard",
       "idField": "id",
-      "displayFields": ["name"],
+      "displayFields": [
+        "name"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -155,7 +159,7 @@
           "update": false,
           "editor": false,
           "upload": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "order": -1
@@ -233,7 +237,7 @@
           "update": false,
           "editor": false,
           "upload": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "order": -1
@@ -253,7 +257,7 @@
           "update": false,
           "editor": false,
           "upload": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "order": -1
@@ -288,7 +292,7 @@
           "required": true,
           "kind": "scalar",
           "relationField": false,
-          "title": "Minute Offset",
+          "title": "SLA Minute Offset",
           "create": true,
           "update": true,
           "editor": false,
@@ -304,7 +308,9 @@
       "id": "User",
       "name": "User",
       "idField": "id",
-      "displayFields": ["group.name"],
+      "displayFields": [
+        "group.name"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -475,7 +481,9 @@
       "id": "Section",
       "name": "Section",
       "idField": "id",
-      "displayFields": ["name"],
+      "displayFields": [
+        "name"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -495,7 +503,7 @@
           "update": false,
           "editor": false,
           "upload": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "order": -1
@@ -535,7 +543,7 @@
           "update": false,
           "editor": false,
           "upload": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "order": -1
@@ -555,7 +563,7 @@
           "update": false,
           "editor": false,
           "upload": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "order": -1
@@ -575,7 +583,7 @@
           "update": true,
           "editor": false,
           "upload": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "order": -1
@@ -615,7 +623,7 @@
           "update": true,
           "editor": false,
           "upload": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "order": -1
@@ -654,7 +662,7 @@
           "update": false,
           "editor": false,
           "upload": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "order": -1
@@ -684,7 +692,9 @@
       "id": "Step",
       "name": "Step",
       "idField": "id",
-      "displayFields": ["name"],
+      "displayFields": [
+        "name"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -700,7 +710,7 @@
           "unique": false,
           "create": false,
           "update": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "editor": false,
@@ -760,7 +770,7 @@
           "unique": false,
           "create": true,
           "update": true,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "editor": false,
@@ -880,7 +890,7 @@
           "unique": false,
           "create": false,
           "update": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "editor": false,
@@ -900,7 +910,7 @@
           "unique": false,
           "create": false,
           "update": false,
-          "read": true,
+          "read": false,
           "filter": true,
           "sort": true,
           "editor": false,
@@ -915,7 +925,9 @@
       "id": "JournalEntry",
       "name": "Journal Entry",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -1005,7 +1017,9 @@
       "id": "Job",
       "name": "Job",
       "idField": "id",
-      "displayFields": ["name"],
+      "displayFields": [
+        "name"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -1174,7 +1188,9 @@
       "id": "JobRun",
       "name": "Job Run",
       "idField": "id",
-      "displayFields": ["id"],
+      "displayFields": [
+        "id"
+      ],
       "create": true,
       "update": true,
       "delete": true,
@@ -1445,7 +1461,12 @@
     },
     {
       "name": "JobType",
-      "fields": ["AUTOSYS", "FMC", "DATABASE", "INSTRUMENTED"]
+      "fields": [
+        "AUTOSYS",
+        "FMC",
+        "DATABASE",
+        "INSTRUMENTED"
+      ]
     }
   ]
 }
