--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql-tag": "2.10.4",
     "graphql-tools": "6.0.13",
     "jsonwebtoken": "8.5.1",
+    "micro-cors": "^0.1.1",
     "moment": "^2.27.0",
     "next": "9.4.4",
     "react": "16.13.1",
@@ -53,6 +54,7 @@
     "@types/cookie": "0.4.0",
     "@types/graphql": "14.5.0",
     "@types/jsonwebtoken": "8.5.0",
+    "@types/micro-cors": "^0.1.1",
     "@types/node": "14.0.23",
     "@types/react": "16.9.43",
     "@types/react-dom": "16.9.8",
