Support for non-registered Users

--- a/prisma/.env
+++ b/prisma/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://dashboard:dashboard@localhost:6543/dashboard"
+DATABASE_URL="postgresql://dashboard:dashboard@localhost:6543/dashboard?schema=public"
