--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "db-drop": "ts-node --transpile-only -P nexus.tsconfig.json scripts/drop-database"
   },
   "dependencies": {
-    "@apollo/client": "3.0.2",
-    "@apollo/react-ssr": "4.0.0-beta.2",
-    "@nexus/schema": "0.14.0",
-    "@paljs/admin": "1.1.6",
+    "@apollo/client": "3.1.3",
+    "@apollo/react-ssr": "4.0.0",
+    "@nexus/schema": "0.15.0",
+    "@paljs/admin": "1.1.11",
     "@paljs/icons": "1.0.1",
-    "@paljs/nexus": "1.1.7",
+    "@paljs/nexus": "1.1.9",
     "@paljs/ui": "1.0.3",
-    "@prisma/client": "2.2.2",
-    "apollo-server-micro": "2.15.1",
+    "@prisma/client": "2.4.1",
+    "apollo-server-micro": "2.16.1",
     "bcryptjs": "2.4.3",
     "cookie": "0.4.1",
-    "graphql": "14.7.0",
-    "graphql-tag": "2.10.4",
-    "graphql-tools": "6.0.13",
+    "graphql": "15.3.0",
+    "graphql-tag": "2.11.0",
+    "graphql-tools": "6.0.18",
     "jsonwebtoken": "8.5.1",
     "micro-cors": "^0.1.1",
     "moment": "^2.27.0",
@@ -45,28 +45,28 @@
     "ts-node": "8.10.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "1.17.0",
-    "@graphql-codegen/typescript": "1.17.0",
-    "@graphql-codegen/typescript-operations": "1.17.0",
-    "@graphql-codegen/typescript-react-apollo": "1.17.0",
-    "@prisma/cli": "2.2.2",
+    "@graphql-codegen/cli": "1.17.7",
+    "@graphql-codegen/typescript": "1.17.7",
+    "@graphql-codegen/typescript-operations": "1.17.7",
+    "@graphql-codegen/typescript-react-apollo": "2.0.5",
+    "@prisma/cli": "2.4.1",
     "@types/bcryptjs": "2.4.2",
     "@types/cookie": "0.4.0",
     "@types/graphql": "14.5.0",
     "@types/jsonwebtoken": "8.5.0",
     "@types/micro-cors": "^0.1.1",
-    "@types/node": "14.0.23",
-    "@types/react": "16.9.43",
+    "@types/node": "14.0.27",
+    "@types/react": "16.9.46",
     "@types/react-dom": "16.9.8",
-    "@types/styled-components": "5.1.1",
-    "@typescript-eslint/eslint-plugin": "3.6.1",
-    "@typescript-eslint/parser": "3.6.1",
-    "babel-plugin-graphql-tag": "2.5.0",
-    "babel-plugin-styled-components": "1.10.7",
-    "eslint": "7.5.0",
+    "@types/styled-components": "5.1.2",
+    "@typescript-eslint/eslint-plugin": "3.9.0",
+    "@typescript-eslint/parser": "3.9.0",
+    "babel-plugin-graphql-tag": "3.0.0",
+    "babel-plugin-styled-components": "1.11.1",
+    "eslint": "7.6.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-react": "7.20.5",
     "husky": "4.2.5",
     "prettier": "2.0.5",
     "pretty-quick": "2.0.1",
