--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@apollo/client": "^3.1.3",
     "@apollo/react-ssr": "4.0.0",
     "@nexus/schema": "0.15.0",
-    "@paljs/admin": "1.1.12",
+    "@paljs/admin": "2.2.1",
+    "@paljs/cli": "^2.2.1",
     "@paljs/icons": "1.0.1",
-    "@paljs/nexus": "1.1.9",
+    "@paljs/nexus": "2.2.1",
     "@paljs/ui": "1.0.3",
-    "@prisma/client": "2.3.0",
+    "@prisma/client": "2.8.0",
     "apollo-server-micro": "2.16.1",
     "bcryptjs": "2.4.3",
     "cookie": "0.4.1",
