--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "moment": "^2.27.0",
     "next": "9.5.2",
     "react": "16.13.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "16.13.1",
+    "react-quill": "^1.3.5",
     "styled-components": "5.1.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "ts-node": "8.10.2"
   },
   "devDependencies": {
